# FionaVideo

./: .gitignore  CMakeLists.txt  FionaVideo.sln  FionaVideo.vcxproj  FionaVideo.vcxproj.filters  FionaVideoManager.cpp  FionaVideoManager.h  GlobalDefines.h  HowTo.txt  VideoObject.cpp  VideoObject.h  audioPlayer.cpp  audioPlayer.h  gettimeofday.cpp  gettimeofday.h  main.cpp  mediaDecoder.cpp  mediaDecoder.h  videoPlayer.cpp  videoPlayer.h
SDK/bin64/release/: Thumbs.db  shadersreadme.txt  spheremap.frag  spheremap.vert
SDK/ffmpeg/include/libavcodec/: avcodec.h  version.h
SDK/ffmpeg/include/libavdevice/: version.h
SDK/ffmpeg/include/libavfilter/: version.h
SDK/ffmpeg/include/libavformat/: avformat.h  avio.h  version.h
SDK/ffmpeg/include/libavutil/: avstring.h  bprint.h  common.h  dict.h  error.h  ffversion.h  fifo.h  opt.h  pixdesc.h  pixfmt.h  samplefmt.h  time.h  version.h
SDK/ffmpeg/include/libpostproc/: version.h
SDK/ffmpeg/include/libswscale/: version.h
SDK/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-54.def  avutil.lib  postproc.lib  swresample.lib  swscale-3.def  swscale.lib
SDK/ffmpeg32/include/libavformat/: avformat.h  (+2 more)
SDK/ffmpeg32/lib/: avcodec-56.def  avformat-56.def  swresample-1.def
SDK/shaders/: spheremap.frag  spheremap.vert
fmod/common/: wincompat.h
fmod/lib/: fmodstudio64_vc.lib  fmodstudioL64_vc.lib  fmodstudioL_vc.lib  fmodstudio_vc.lib
x64/Release/FionaVideo.tlog/: CL.read.1.tlog  CL.write.1.tlog  FionaVideo.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+4 files in other folders)
